tests/snapshots/integration_git__git_rename_remote.snap
---
source: tests/integration_git.rs
expression: remotes_after_rename
---
- - upstream
  - "https://github.com/test/repo.git"
  - fetch
- - upstream
  - "https://github.com/test/repo.git"
  - push
