tests/snapshots/integration_git__git_set_remote_push_url.snap
---
source: tests/integration_git.rs
expression: remotes
---
- - origin
  - "https://github.com/test/repo.git"
  - fetch
- - origin
  - nopushurl
  - push
